--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,15 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  valuable: ^1.3.0
+  collection: ^1.18.0
+  meta: ^1.15.0
+  flutter_localizations:
+    sdk: flutter
+  intl: ^0.19.0
+  shared_preferences: ^2.3.2
+  scope: ^5.1.0
+  synchronized: ^3.2.0
 
 dev_dependencies:
   flutter_test:
